# app/Http/Resources/UserResource.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Resources;
 
+use App\Enums\PhoneNumberType;
+
 /**
  * Summary of UserResource
  */
@@ -14,7 +16,8 @@ class UserResource extends BasicResource
     public function toArray($request): array
     {
         return array_merge(parent::toArray($request), [
-            'phone_number' => PhoneNumberResource::collection($this->phoneNumbers),
+            'private_phone_number' => $this->phoneNumbers->firstWhere('type', PhoneNumberType::PRIVATE->value)?->number,
+            'phone_number' => $this->phoneNumbers->firstWhere('type', PhoneNumberType::WORK->value)?->number,
             'job_positions' => JobPositionResource::collection($this->jobPositions),
             'avatar_path' => $this->avatar_path,
             'background_path' => $this->background_path,
